...
    final dialog = DSDialog.md(
      title: 'Cargando contenido',
      content: const Text('El contenido se está cargando...'),
      state: DSDialogState.skeleton,
      actions: [
        DialogAction(
          label: 'Cancelar',
          onPressed: () => Navigator.of(context).pop(),
        ),
      ],
    );

    DSDialog.show(context: context, dialog: dialog);
...
        DialogAction(
          label: 'Documentación',
          icon: Icons.description,
          onPressed: () => Navigator.of(context).pop(),
        ),
        DialogAction(
          label: 'Cerrar',
          isPrimary: true,
          onPressed: () => Navigator.of(context).pop(),
        ),
      ],
    );

...
