...
  const ThemeGalleryScreen({super.key});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: const DSAppBarWithBack(
        title: Text('Galería de Temas'),
        actions: [
          ThemeSwitcherButton(),
          ThemePickerButton(),
        ],
      ),
      body: const ThemesShowcaseScreen(),
...
